#2 charsheet project configuration

--- a/www/charsheet.html
+++ b/www/charsheet.html
@@ -19,10 +19,11 @@
         <!-- CSS Libraries -->
 
         <!-- CSS -->
-        <link rel="stylesheet" href="common/css/index.css">
+        <link rel="stylesheet" href="css/charsheet.css">
+        <link rel="stylesheet" href="css/global.css">
 
         <!-- JS Libraries -->
-        <script src="common/js/lib/jquery.min.js"></script>
+        <script src="js/lib/jquery.min.js"></script>
 
         <!-- JS -->
 
@@ -31,6 +32,6 @@
     <body>
         <div id="charsheet"></div>
         <script src="cordova.js"></script>
-        <script src="common/js/index.js"></script>
+        <script type="module" src="js/index.js"></script>
     </body>
 </html>
