#3 Setup materializecss framework. Added first components

--- a/www/charsheet.html
+++ b/www/charsheet.html
@@ -17,13 +17,16 @@
         <meta name="color-scheme" content="light dark">
 
         <!-- CSS Libraries -->
+        <link rel="stylesheet" href="css/lib/materialize.min.css">
 
         <!-- CSS -->
-        <link rel="stylesheet" href="css/charsheet.css">
-        <link rel="stylesheet" href="css/global.css">
+        <link rel="stylesheet" href="css/charsheet/charsheet.css">
+        <link rel="stylesheet" href="css/common/global.css">
+        <link rel="stylesheet" href="css/component/top.css">
 
         <!-- JS Libraries -->
         <script src="js/lib/jquery.min.js"></script>
+        <script src="js/lib/materialize.min.js"></script>
 
         <!-- JS -->
 
