--- a/www/charsheet.html
+++ b/www/charsheet.html
@@ -15,14 +15,16 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
         <meta name="color-scheme" content="light dark">
+        <link rel="shortcut icon" href="#">
 
         <!-- CSS Libraries -->
         <link rel="stylesheet" href="css/lib/materialize.min.css">
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/charsheet/charsheet.css">
+        <link rel="stylesheet" href="css/common/component/navbar.css">
+        <link rel="stylesheet" href="css/common/component/top.css">
         <link rel="stylesheet" href="css/common/global.css">
-        <link rel="stylesheet" href="css/component/top.css">
 
         <!-- JS Libraries -->
         <script src="js/lib/jquery.min.js"></script>
@@ -35,6 +37,6 @@
     <body>
         <div id="charsheet"></div>
         <script src="cordova.js"></script>
-        <script type="module" src="js/index.js"></script>
+        <script type="module" src="js/common/index.js"></script>
     </body>
 </html>
