#5 Added landing page

--- a/www/charsheet.html
+++ b/www/charsheet.html
@@ -20,11 +20,15 @@
         <!-- CSS Libraries -->
         <link rel="stylesheet" href="css/lib/materialize.min.css">
 
-        <!-- CSS -->
-        <link rel="stylesheet" href="css/charsheet/charsheet.css">
+        <!-- CSS common -->
+        <link rel="stylesheet" href="css/common/component/container.css">
         <link rel="stylesheet" href="css/common/component/navbar.css">
         <link rel="stylesheet" href="css/common/component/top.css">
         <link rel="stylesheet" href="css/common/global.css">
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="css/charsheet/charsheet.css">
+        <link rel="stylesheet" href="css/charsheet/landing.css">
 
         <!-- JS Libraries -->
         <script src="js/lib/jquery.min.js"></script>
