#6 Added sheet module

--- a/www/charsheet.html
+++ b/www/charsheet.html
@@ -29,6 +29,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="css/charsheet/charsheet.css">
         <link rel="stylesheet" href="css/charsheet/landing.css">
+        <link rel="stylesheet" href="css/charsheet/sheet.css">
 
         <!-- JS Libraries -->
         <script src="js/lib/jquery.min.js"></script>
